# Computer_Graphics

./: CMakeLists.txt  README.md  main.cpp
include/: glad.c
src/: Main.cpp  Main.h
src/simple/: Triangle.cpp  Triangle.h
src/utils/: Shader.h
